--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".historyActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".FragActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
