--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:usesCleartextTraffic="true"
         android:hardwareAccelerated="true"
         >
-        <activity android:name=".historyActivity"
-                ></activity>
         <activity android:name=".FragActivity"
          android:hardwareAccelerated="true"
          >
@@ -29,6 +27,8 @@
 
         </activity>
         <activity android:name=".MyWebViewActivity" />
+        <activity android:name=".history.historyActivity"/>
+        <activity android:name=".flag.flagActivity"/>
     </application>
 
 </manifest>
