--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".flag.EditActivity"></activity>
         <activity android:name=".history.historyActivity" />
         <activity android:name=".flag.flagActivity" />
         <activity android:name=".FragActivity" />
