--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true"
         android:hardwareAccelerated="true"
         >
-        <activity android:name=".FragActivity"
+        <activity android:name=".user.SplashActivity"
          android:hardwareAccelerated="true"
          >
         <intent-filter>
@@ -23,12 +23,18 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
+        <activity android:name=".MainActivity"
+        android:hardwareAccelerated="true">
         </activity>
         <activity android:name=".MyWebViewActivity" />
         <activity android:name=".history.historyActivity"/>
+        <activity android:name=".FragActivity"/>
+        <activity android:name=".user.LoginActivity" />
+        <activity android:name=".user.RegisterActivity"/>
         <activity android:name=".flag.flagActivity"/>
+        <activity android:name=".user.BaseActivity"/>
+        <activity android:name=".flag.EditActivity"/>
+        <activity android:name=".flag.flagEditActivity"/>
     </application>
 
 </manifest>
