--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -102,6 +102,16 @@
             <version>2.7.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.30</version>
+        </dependency>
 
     </dependencies>
 
