--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mywebdemo">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_OWNER_DATA" />
+
 
     <application
         android:allowBackup="true"
@@ -12,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".flag.EditActivity"></activity>
+        <activity android:name=".webview.ShowWebImageActivity"></activity>
+        <activity android:name=".flag.EditActivity" />
         <activity android:name=".history.historyActivity" />
         <activity android:name=".flag.flagActivity" />
         <activity android:name=".FragActivity" />
