--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mywebdemo">
-
+        package="com.example.mywebdemo">
+    <!-- 申请网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:targetSdkVersion="14"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar"
-        android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true"
-        >
-        <activity android:name=".user.SplashActivity"
-         android:hardwareAccelerated="true"
-         >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            android:allowBackup="true"
+            android:hardwareAccelerated="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:targetSdkVersion="14"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:usesCleartextTraffic="true">
+        <activity android:name=".user.MeActivity"></activity>
+        <activity
+                android:name=".user.SplashActivity"
+                android:hardwareAccelerated="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-        android:hardwareAccelerated="true">
-        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:hardwareAccelerated="true"></activity>
         <activity android:name=".MyWebViewActivity" />
-        <activity android:name=".history.historyActivity"/>
-        <activity android:name=".FragActivity"/>
+        <activity android:name=".history.historyActivity" />
+        <activity android:name=".FragActivity" />
         <activity android:name=".user.LoginActivity" />
-        <activity android:name=".user.RegisterActivity"/>
-        <activity android:name=".flag.flagActivity"/>
-        <activity android:name=".user.BaseActivity"/>
-        <activity android:name=".flag.EditActivity"/>
-        <activity android:name=".flag.flagEditActivity"/>
+        <activity android:name=".user.RegisterActivity" />
+        <activity android:name=".flag.flagActivity" />
+        <activity android:name=".user.BaseActivity" />
+        <activity android:name=".flag.EditActivity" />
+        <activity android:name=".flag.flagEditActivity" />
     </application>
 
 </manifest>
