--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'com.zhy:percent-support-extends:1.1.1'
     implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.7'
