--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
     <!-- 申请网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+
     <application
             android:allowBackup="true"
             android:hardwareAccelerated="true"
@@ -36,6 +40,7 @@
         <activity android:name=".user.BaseActivity" />
         <activity android:name=".flag.EditActivity" />
         <activity android:name=".flag.flagEditActivity" />
+        <activity android:name=".webview.ShowWebImageActivity"/>
     </application>
 
 </manifest>
