--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
 
 
     <application
+
+
             android:allowBackup="true"
             android:hardwareAccelerated="true"
             android:icon="@mipmap/ic_launcher"
@@ -18,6 +20,10 @@
             android:targetSdkVersion="14"
             android:theme="@style/AppTheme.NoActionBar"
             android:usesCleartextTraffic="true">
+        <meta-data
+                android:name="android.webkit.WebView.EnableSafeBrowsing"
+                android:value="true" />
+
         <activity android:name=".user.MeActivity"></activity>
         <activity
                 android:name=".user.SplashActivity"
@@ -30,7 +36,9 @@
         </activity>
         <activity
                 android:name=".MainActivity"
-                android:hardwareAccelerated="true"></activity>
+                android:hardwareAccelerated="true">
+
+        </activity>
         <activity android:name=".MyWebViewActivity" />
         <activity android:name=".history.historyActivity" />
         <activity android:name=".FragActivity" />
@@ -41,6 +49,7 @@
         <activity android:name=".flag.EditActivity" />
         <activity android:name=".flag.flagEditActivity" />
         <activity android:name=".webview.ShowWebImageActivity"/>
+        <activity android:name=".webview.ShowVideoActivity"/>
     </application>
 
 </manifest>
