--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,28 +3,28 @@
         package="com.example.mywebdemo">
     <!-- 申请网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 
     <application
-
-
             android:allowBackup="true"
             android:hardwareAccelerated="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/browser_logo"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/browser_logo"
             android:supportsRtl="true"
             android:targetSdkVersion="14"
             android:theme="@style/AppTheme.NoActionBar"
-            android:usesCleartextTraffic="true">
+            android:usesCleartextTraffic="true"
+            android:requestLegacyExternalStorage="true">
+        <activity android:name=".news.NewsActivity"></activity>
+
         <meta-data
                 android:name="android.webkit.WebView.EnableSafeBrowsing"
                 android:value="true" />
 
-        <activity android:name=".user.MeActivity"></activity>
+        <activity android:name=".user.MeActivity" />
         <activity
                 android:name=".user.SplashActivity"
                 android:hardwareAccelerated="true">
@@ -33,6 +33,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
                 android:name=".MainActivity"
@@ -48,8 +49,8 @@
         <activity android:name=".user.BaseActivity" />
         <activity android:name=".flag.EditActivity" />
         <activity android:name=".flag.flagEditActivity" />
-        <activity android:name=".webview.ShowWebImageActivity"/>
-        <activity android:name=".webview.ShowVideoActivity"/>
+        <activity android:name=".webview.ShowWebImageActivity" />
+        <activity android:name=".webview.ShowVideoActivity" />
     </application>
 
 </manifest>
